Cambiado imagenes de la home

--- a/css/style.css
+++ b/css/style.css
@@ -9933,7 +9933,7 @@ span.email-destacado:before {
         padding: 81px 0px 96px 0px;
         margin-bottom: 0px;
         background-position: top;
-        background-image: url('../images/679305551554468man-sitting-on-bench-having-a-cup-of-coffee-374044-m.jpg') !important;
+        background-image: url('../images/679305551554468man-sitting-on-bench-having-a-cup-of-coffee-374044-m.webp') !important;
     }
     .ban-ql{margin-bottom: 0px; padding-top: 10px;    margin-top: 30px;   padding-bottom: 30px;}
     .ban-ql ul li div{/* width: 145px; */padding: 20px 10px;}
@@ -10285,7 +10285,7 @@ span.email-destacado:before {
         padding: 80px 0px 20px 0px;
         background-size: auto;
         background-position: 50% 10%;
-        background-image: url('../images/679305551554468man-sitting-on-bench-having-a-cup-of-coffee-374044-m.jpg') !important;
+        background-image: url('../images/679305551554468man-sitting-on-bench-having-a-cup-of-coffee-374044-m.webp') !important;
     }
     .ban-tit{
         top: 0;
